--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -34,3 +34,9 @@
     url  = {https://www.graphpad.com/support/faq/what-is-the-difference-between-ordinal-interval-and-ratio-variables-why-should-i-care/},
     addendum = "(accessed: 11.12.2020)"
 }
+@misc{2020:wiki-somersd,
+    author = {Wikipedia},
+    title = {Somer's D},
+    url  = {https://en.wikipedia.org/wiki/Somers%27_D},
+    addendum = "(accessed: 11.12.2020)"
+}
