--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -40,3 +40,21 @@
     url  = {https://en.wikipedia.org/wiki/Somers%27_D},
     addendum = "(accessed: 11.12.2020)"
 }
+@Book{1983:liebetrau,
+  author = {Albert M. Liebetrau},
+  title = {Measures of association},
+  publisher = {Sage Publications, Inc.},
+  year = {1983}
+}
+@Book{1984:reynolds,
+  author = {H. T. Reynolds},
+  title = {Analysis of nominal data},
+  publisher = {Sage Publications, Inc.},
+  year = {1984}
+}
+@Book{1970:cox,
+  author = {D. R. Cox},
+  title = {Analysis of binary data},
+  publisher = {Chapman and Hall},
+  year = {1970}
+}
