add deep dive; bib page should come last https://sphinxcontrib-bibtex.readthedocs.io/en/latest/usage.html#issue-unresolved-citations

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -58,3 +58,27 @@
   publisher = {Chapman and Hall},
   year = {1970}
 }
+@Book{2020:pearl,
+  author = {Judea Pearl},
+  title = {The Book of Why: The New Science of Cause and Effect},
+  publisher = {Basic Books},
+  year = {2020}
+}
+@Book{2016:pearl,
+  author = {Judea Pearl},
+  title = {Causal Inference in Statistics - A Primer},
+  publisher = {Wiley},
+  year = {2016}
+}
+@Book{2009:pearl,
+  author = {Judea Pearl},
+  title = {Causality: Models, Reasoning and Inference},
+  publisher = {Chapman and Hall},
+  year = {2009}
+}
+@Book{1988:pearl,
+  author = {Judea Pearl},
+  title = {Probabilistic Reasoning in Intelligent Systems: Networks of Plausible Inference},
+  publisher = {Morgan Kaufmann},
+  year = {1988}
+}
