--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -40,6 +40,12 @@
     url  = {https://en.wikipedia.org/wiki/Somers%27_D},
     addendum = "(accessed: 11.12.2020)"
 }
+@misc{2008:nips,
+    author = {NIPS},
+    title = {NIPS 2008 Workshop on Causality},
+    url  = {http://clopinet.com/isabelle/Projects/NIPS2008/},
+    addendum = "(accessed: 11.13.2020)"
+}
 @Book{1983:liebetrau,
   author = {Albert M. Liebetrau},
   title = {Measures of association},
