--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -88,3 +88,9 @@
   publisher = {Morgan Kaufmann},
   year = {1988}
 }
+@misc{2017:glen,
+    author = {Stephanie Glen},
+    title = {What is Somers’ Delta?},
+    url  = {https://www.statisticshowto.com/somers-d},
+    addendum = "(accessed: 11.14.2020)"
+}
