--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -40,6 +40,30 @@
     url  = {https://en.wikipedia.org/wiki/Somers%27_D},
     addendum = "(accessed: 11.12.2020)"
 }
+@misc{2020:wiki-jaccard,
+    author = {Wikipedia},
+    title = {Jaccard index},
+    url  = {https://en.wikipedia.org/wiki/Jaccard_index},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:wiki-dice,
+    author = {Wikipedia},
+    title = {Sørensen–Dice coefficient},
+    url  = {https://en.wikipedia.org/wiki/S%C3%B8rensen%E2%80%93Dice_coefficient},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:wiki-tversky,
+    author = {Wikipedia},
+    title = {Tversky index},
+    url  = {https://en.wikipedia.org/wiki/Tversky_index},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:wiki-overlap,
+    author = {Wikipedia},
+    title = {Overlap coefficient},
+    url  = {https://en.wikipedia.org/wiki/Overlap_coefficient},
+    addendum = "(accessed: 11.14.2020)"
+}
 @misc{2008:nips,
     author = {NIPS},
     title = {NIPS 2008 Workshop on Causality},
@@ -94,3 +118,36 @@
     url  = {https://www.statisticshowto.com/somers-d},
     addendum = "(accessed: 11.14.2020)"
 }
+@misc{2020:psu-binary,
+    author = {Penn State University},
+    title = {Measures of Association for Binary Variables},
+    url  = {https://online.stat.psu.edu/stat505/lesson/14/14.3},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:psu-continuous,
+    author = {Penn State University},
+    title = {Measures of Association for Continuous Variables},
+    url  = {https://online.stat.psu.edu/stat505/lesson/14/14.2},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:ibm-proximities,
+    author = {IBM Proximities},
+    title = {Measures for binary data},
+    url  = {https://www.ibm.com/support/knowledgecenter/SSLVMB_24.0.0/spss/base/syn_proximities_measures_binary_data.html},
+    addendum = "(accessed: 11.14.2020)"
+}
+@misc{2020:stack-sim,
+    author = {Stack Exchange},
+    title = {Measures for binary data},
+    url  = {https://stats.stackexchange.com/questions/61705/similarity-coefficients-for-binary-data-why-choose-jaccard-over-russell-and-rao},
+    addendum = "(accessed: 11.14.2020)"
+}
+@article{2010:choi,
+  author  = {Seung-Seok Choi, Sung-Hyuk Cha, Charles C. Tappert},
+  title   = {A Survey of Binary Similarity and Distance Measures},
+  journal = {Systemics, Cybernetics and Informatics},
+  year    = 2010,
+  number  = 1,
+  volume  = 8
+}
+
