fix binary stuff

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -58,6 +58,12 @@
     url  = {https://en.wikipedia.org/wiki/Tversky_index},
     addendum = "(accessed: 11.14.2020)"
 }
+@misc{2020:wiki-prospect,
+    author = {Wikipedia},
+    title = {Prospect theory},
+    url  = {https://en.wikipedia.org/wiki/Prospect_theory},
+    addendum = "(accessed: 11.14.2020)"
+}
 @misc{2020:wiki-overlap,
     author = {Wikipedia},
     title = {Overlap coefficient},
