add methods; grind; documentation

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -70,6 +70,12 @@
     url  = {https://en.wikipedia.org/wiki/Overlap_coefficient},
     addendum = "(accessed: 11.14.2020)"
 }
+@misc{2020:wiki-fowlkes,
+    author = {Wikipedia},
+    title = {Fowlkes-Mallows Index},
+    url  = {https://en.wikipedia.org/wiki/Fowlkes%E2%80%93Mallows_index},
+    addendum = "(accessed: 11.14.2020)"
+}
 @misc{2008:nips,
     author = {NIPS},
     title = {NIPS 2008 Workshop on Causality},
