--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -162,4 +162,11 @@
   number  = 1,
   volume  = 8
 }
+@article{2019:warrens,
+  author  = {Matthijs J. Warrens},
+  title   = {Similarity measures for 2 x 2 tables},
+  journal = {Journal of Intelligent & Fuzzy Systems},
+  year    = 2019,
+  volume  = 36
+}
 
